- disable header "redactor" floating feature and fixed z-index of header menu

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -104,6 +104,10 @@ body {
     border-bottom: 2px solid #FF9600;
 }
 
+.navbar-fixed-top, .navbar-fixed-bottom {
+    z-index: 1055;
+}
+
 footer {
     clear: both;
     text-align: center;
